# madr-fastapi

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
madr/: database.py
madr/database/: models.py  session.py
madr/repositories/: user_repository.py
madr/services/: user_service.py
migrations/: env.py
migrations/versions/: 3dd9d46b982a_create_user_romatist_and_book_tables.py
tests/: conftest.py  factories.py  test_models.py  test_user_repository.py  test_user_service.py
